--- a/style.css
+++ b/style.css
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-/* h1,strong,p {
-  font-size: inherit;
-  font-weight: inherit;
-} */
-
 a {
   text-decoration: none;
 }
@@ -18,6 +13,9 @@ ul {
 }
 
 /* design  */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
@@ -27,6 +25,7 @@ body {
 button {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
   border: none;
+  cursor: pointer;
 }
 
 .item-name {
@@ -55,6 +54,7 @@ button {
   width: 360px;
   background-color: #fff;
   padding: 31px 27px;
+  margin: 0 auto;
 }
 
 .my-cola {
@@ -87,6 +87,15 @@ button {
   margin-top: 6px;
 }
 
+.charge-wrapper {
+  margin: 20px 0;
+  display: grid;
+  grid-template-columns: 200px 94px;
+  grid-template-rows: 33px 33px 106px;
+  gap: 11px;
+}
+
+
 .price {
   margin-top: 7px;
   line-height: 1;
@@ -98,7 +107,6 @@ button {
 }
 
 .balance {
-  width: 200px;
   display: flex;
   justify-content: space-between;
   font-weight: 500;
@@ -148,11 +156,12 @@ button {
 }
 
 .cola-get {
-  border: 1px solid #BDBDBD;
+  outline: 1px solid #BDBDBD;
   border-radius: 5px;
   overflow-y: scroll;
   background: #EAE8FE;
-  padding: 12px;
+  padding-top: 12px;
+  padding-left: 12px;
 }
 
 .cola-get.min {
@@ -197,6 +206,10 @@ button {
   border-radius: 5px;
 }
 
+.balance.having {
+  margin-bottom: 41px;
+}
+
 .get-title {
   font-size: 14px;
   font-weight: 700;
@@ -214,15 +227,27 @@ button {
   width: 100%;
 }
 
+.total {
+  display: block;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 17px;
+  text-align: right;
+  margin-top: 6px;
+}
+
 /* 스크롤바 패딩값  */
+
 ::-webkit-scrollbar {
-  /* scroll-margin: 0; */
-  width: 4px;
+  width: 8px;
   height: 79px;
-  padding: 1em;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #FFFFFF;
   border-radius: 50px;
+  background: #FFFFFF;
+  background-clip: padding-box;
+  border: 2px solid transparent;
 }
+
+
