--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
@@ -20,18 +18,14 @@ ul {
 body {
   font-family: 'Noto Sans KR', sans-serif;
   background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
   border: none;
   cursor: pointer;
-}
-
-.item-name {
-  font-size: 9px;
-  line-height: 1.4;
-  color: #333333;
 }
 
 .sc-out {
@@ -52,12 +46,19 @@ button {
 
 .select-part {
   width: 360px;
+  height: 545px;
   background-color: #fff;
   padding: 31px 27px;
   margin: 0 auto;
 }
 
+.item-name {
+  font-size: 9px;
+  color: #333333;
+}
+
 .my-cola {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 12px;
@@ -65,6 +66,8 @@ button {
 }
 
 .cola-item {
+  width: 94px;
+  position: relative;
   box-sizing: border-box;
   border-radius: 10px;
   display: flex;
@@ -87,8 +90,23 @@ button {
   margin-top: 6px;
 }
 
+.cola-item.sold-out::after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: -0.5px;
+  bottom: 0.2px;
+  background: url(./images/soldOut.svg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 94.5px;
+  height: 130px;
+  border-radius: 10px;
+}
+
+
 .charge-wrapper {
-  margin: 20px 0;
+  margin-top: 20px;
   display: grid;
   grid-template-columns: 200px 94px;
   grid-template-rows: 33px 33px 106px;
@@ -107,6 +125,7 @@ button {
 }
 
 .balance {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   font-weight: 500;
@@ -115,12 +134,17 @@ button {
   background: #EAE8FE;
   border-radius: 5px;
   padding: 6px 10px 7px 10px;
+  margin: 0 auto;
+}
+
+.balance.having {
+  width: 306px;
 }
 
 .money-btn {
   width: 94px;
   font-size: 13px;
-  line-height: 1.46;
+  line-height: 19px;
   font-weight: 500;
   background-color: #fff;
   border: none;
@@ -131,7 +155,6 @@ button {
 
 .input-money {
   width: 200px;
-  height: 32px;
   border: 1px solid #BDBDBD;
   border-radius: 5px;
 }
@@ -139,9 +162,13 @@ button {
 .input-money::placeholder {
   font-weight: 500;
   font-size: 13px;
-  line-height: 1.46;
+  text-align: right;
   color: #BDBDBD;
-  padding: 6px;
+}
+
+.input-money[type="text"] {
+  font-size: 13px;
+  padding: 10px;
 }
 
 .get-btn {
@@ -150,9 +177,10 @@ button {
   background: #6327FE;
   border-radius: 5px;
   font-size: 13px;
-  line-height: 1.46;
+  line-height: 19px;
   font-weight: 500;
   color: #fff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
 }
 
 .cola-get {
@@ -207,7 +235,14 @@ button {
 }
 
 .balance.having {
-  margin-bottom: 41px;
+  margin-bottom: 6px;
+}
+
+.get-wrapper {
+  width: 360px;
+  height: 474px;
+  margin: 0 auto;
+  padding: 26px 27px;
 }
 
 .get-title {
@@ -221,6 +256,7 @@ button {
 .cola-get.wide {
   width: 306px;
   height: 364px;
+  padding-right: 10px;
 }
 
 .cola-get.wide .order-item {
@@ -231,9 +267,16 @@ button {
   display: block;
   font-weight: 500;
   font-size: 12px;
-  line-height: 17px;
+  line-height: 20px;
   text-align: right;
   margin-top: 6px;
+}
+
+.getpart-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* 스크롤바 패딩값  */
@@ -251,3 +294,51 @@ button {
 }
 
 
+@media (min-width:1000px) {
+
+  body {
+    background: #EAE8FE;
+  }
+
+  .logo-img {
+    width: 386px;
+    height: 180px;
+    margin: 0 auto;
+  }
+
+  .vending-wrapper {
+    margin-top: 67px;
+  }
+
+  .vending-wrapper::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+
+  .select-part {
+    float: left;
+  }
+
+  .balance.having {
+    margin-bottom: 0;
+  }
+
+  .having-money {
+    width: 360px;
+    padding: 9px 27px;
+    background-color: #fff;
+    margin: 0 auto;
+  }
+
+  .get-wrapper {
+    background-color: #fff;
+    margin: 20px 28px;
+
+  }
+
+  .getpart-wrapper {
+    float: right;
+  }
+
+}
