Fix: 콜라 버튼 pointer-events 설정

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ strong {
 .item-name {
   font-size: 9px;
   color: #333333;
+  pointer-events: none;
+
 }
 
 .my-cola {
@@ -78,6 +80,10 @@ strong {
   padding: 10px 10px 9px 11px;
   background-color: #fff;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+}
+
+.cola-item img {
+  pointer-events: none;
 }
 
 .cola-item:focus,
@@ -133,6 +139,8 @@ strong {
   background: #6327FE;
   border-radius: 50px;
   padding: 5px 16px 5px 15px;
+  pointer-events: none;
+
 }
 
 .balance {
